syntax = "proto3";

package horizon.demo.grpc;

option java_package = "horizon.demo.grpc";
option java_outer_classname = "UserProto";
option java_multiple_files = true;

// User service definition
service UserService {
  // Creates a new user
  rpc CreateUser(CreateUserRequest) returns (User);
  
  // Gets a user by ID
  rpc GetUser(GetUserRequest) returns (User);
  
  // Updates an existing user
  rpc UpdateUser(UpdateUserRequest) returns (User);
  
  // Lists users with pagination
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  
  // Deletes a user
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  
  // Searches users
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
}

// User message
message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

// Request messages
message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserRequest {
  int64 user_id = 1;
}

message UpdateUserRequest {
  int64 user_id = 1;
  string name = 2;
  string email = 3;
}

message ListUsersRequest {
  int32 page = 1;
  int32 size = 2;
}

message DeleteUserRequest {
  int64 user_id = 1;
}

message SearchUsersRequest {
  string query = 1;
  string field = 2;
  int32 max_results = 3;
}

// Response messages
message ListUsersResponse {
  repeated User users = 1;
  int32 page = 2;
  int32 size = 3;
  int32 total_count = 4;
}

message DeleteUserResponse {
  bool deleted = 1;
  User user = 2;
}

message SearchUsersResponse {
  repeated User results = 1;
  int32 count = 2;
  string query = 3;
}
